--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/ZendFramework"]
-	path = vendor/ZendFramework
-	url = git://github.com/santouras/zf2.git
+[submodule "vendor/ZF2"]
+	path = vendor/ZF2
+	url = git@github.com:santouras/zf2.git
